--- a/systems-toolbox-redux-ex.service
+++ b/systems-toolbox-redux-ex.service
@@ -6,8 +6,14 @@ Type=simple
 User=bw
 Group=bw
 Environment=PORT=8011
+Environment=HOST=0.0.0.0
 WorkingDirectory=/home/bw/run
 ExecStart=/usr/bin/java -jar /home/bw/bin/redux-counter01.jar
+WatchdogSec=20s
+Restart=on-failure
+#StartLimitInterval=5min
+#StartLimitBurst=4
+#StartLimitAction=reboot-force
 
 # Give a reasonable amount of time for the server to start up/shut down
 TimeoutSec=300
