--- a/birdwatch-tc.service
+++ b/birdwatch-tc.service
@@ -10,6 +10,8 @@ Group=bw
 Environment=CONF_PATH=/home/bw/conf/twitterconf.edn
 WorkingDirectory=/home/bw/run
 ExecStart=/usr/bin/java -jar /home/bw/bin/birdwatch-tc.jar
+WatchdogSec=30s
+Restart=on-failure
 
 # Give a reasonable amount of time for the server to start up/shut down
 TimeoutSec=300
