adapted birdwatch service

--- a/birdwatch.service
+++ b/birdwatch.service
@@ -7,7 +7,7 @@ After=elasticsearch.service
 Type=simple
 User=bw
 Group=bw
-Environment=HOST=birdwatch.matthiasnehlsen.com
+#Environment=HOST=birdwatch.matthiasnehlsen.com
 Environment=CONF_PATH=/home/bw/conf/birdwatch_conf.edn
 WorkingDirectory=/home/bw/run
 ExecStart=/usr/bin/java -jar /home/bw/bin/birdwatch.jar
